s3fuse (0.13) unstable; urgency=low

  * NEW: File encryption. See README.
  * NEW: Glacier restore requests. See README.
  * NEW: Add least-recently-used eviction to object cache, controlled by the
    max_objects_in_cache configuration option.
  * Switched to SHA256 for file integrity check. File hash, if available, will 
    be in the "s3fuse_sha256" extended attribute.
  * Added standalone SHA256 hash generator ("s3fuse_sha256_hash") that uses the
    same hash-list method as s3fuse.
  * Changed handling of last-modified times. Some timestamps may be inaccurate 
    (but will be correct when updated).
  * Removed precache_on_readdir configuration option (and feature).
  * Renamed built-in extended attributes "__content_type__" and "__etag__" to 
    "s3fuse_content_type" and "s3fuse_etag", respectively.
  * Removed "__md5__" extended attribute.
  * Added note about daemon_timeout.
  * Removed xattr_prefix configuration option and made "user." standard (Linux
    only).
  * Added event counters/statistics. Set "-o stats=/path/to/output.file".
  * Various robustness fixes.

 -- Tarick Bedeir <tarick@bedeir.com>  Sun, 20 Jan 2013 17:20:39 -0600

s3fuse (0.12) unstable; urgency=low

  * NEW: MacOS support. See README.
  * NEW: Made AWS endpoint configurable (to support non-US buckets). 
    See README.
  * Set mount point UID/GID to process effective UID/GID.
  * Fixed extended attribute bugs.
  * Added support for curl/NSS.
  * Fixed circular ownership bug that was causing FDs to be leaked.
  * Made requirements compatible with RHEL6/Amazon Linux.
  * Fixed memory leak in CURL request code.

 -- Tarick Bedeir <tarick@bedeir.com>  Sat, 08 Sep 2012 19:36:13 -0600

s3fuse (0.11) unstable; urgency=low

  * NEW: Added Google Storage support.
  * NEW: Moved AWS keys out of s3fuse.conf. See README.
  * NEW: Changed required fields in s3fuse.conf. See README.
  * On rename, remove destination rather than failing with -EEXIST.